--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "laravel/ui": "^2.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "summerblue/generator": "7.*"
     },
     "config": {
         "optimize-autoloader": true,
