--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8002a321e43793e78592",
+    "/css/app.css": "/css/app.css?id=07bb0eb55c90ef38f261"
 }
